--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,20 @@
-##
-## THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-## IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
-## FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
-## COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
-## IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
-## CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-##
-
 server.port=10000
+spring.profiles.active=dev
+
 server.servlet.context-path=/my-context/path
 server.compression.enabled=true
 server.compression.mime-types=application/javascript,application/json,text/css,text/html,text/plain
+
 logging.config=classpath:logback-spring.xml
+
+# Datasource
+spring.datasource.url=jdbc:postgresql://pepe-ds713:49161/skeleton
+spring.datasource.username=skeleton
+spring.datasource.password=nAqA68po5eRa
+spring.jpa.open-in-view=false
+
+# Liquibase
+spring.liquibase.change-log=classpath:/db/master.xml
+spring.liquibase.url=${spring.datasource.url}
+spring.liquibase.user=${spring.datasource.username}
+spring.liquibase.password=${spring.datasource.password}
