Remove datasource properties sensible values

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=10000
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 server.servlet.context-path=/my-context/path
 server.compression.enabled=true
@@ -8,9 +8,9 @@ server.compression.mime-types=application/javascript,application/json,text/css,t
 logging.config=classpath:logback-spring.xml
 
 # Datasource
-spring.datasource.url=jdbc:postgresql://pepe-ds713:49161/skeleton
-spring.datasource.username=skeleton
-spring.datasource.password=nAqA68po5eRa
+spring.datasource.url=jdbc:postgresql://localhost:5432/<database>
+spring.datasource.username=<username>
+spring.datasource.password=<password>
 spring.jpa.open-in-view=false
 
 # Liquibase
